<resources>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_book_detail">BookDetailActivity</string>
    <string name="openChat">Chat</string>
    <string name="askBook">Get Book</string>
    <string name="ask_book">Ask Book</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="accept">Accept</string>
    <string name="refuse">Refuse</string>
    <string name="delete_request">Delete</string>
    <string name="accepted">Accepted</string>
    <string name="refused">Refused</string>
    <string name="my_books">My books</string>
    <string name="profile">Profile</string>
    <string name="received_request">Received requests</string>
    <string name="sent_request">Sent requests</string>
    <string name="exit">Exit</string>
    <string name="chat">Chat</string>
    <string name="genre">Genre</string>
    <string name="rate">RATE</string>
    <string name="from_utente">From</string>
    <string name="editProfile">Edit Profile</string>
    <string name="connecting">Connecting...</string>
    <string name="chatList">My Chats</string>
    <string name="newBook">Add a new book</string>
    <string name="receivedRequest">Received Requests</string>
    <string name="sentRequest">Sent Requests</string>
    <string name="bookSharing">Book Sharing</string>
    <string name="myBooks">My Books</string>
    <string name="showProfile">My Profile</string>
    <string name="signingIn">Signing in...</string>
    <string name="signedIn">Signed In</string>
</resources>
