<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search_book" />
        <item
            android:id="@+id/nav_book"
            android:icon="@drawable/ic_library_books_black_24dp"
            android:title="@string/my_books" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_perm_identity_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_received_request"
            android:icon="@drawable/ic_call_received_black_24dp"
            android:title="@string/received_request" />
        <item
            android:id="@+id/nav_sent_request"
            android:icon="@drawable/ic_call_made_black_24dp"
            android:title="@string/sent_request" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/exit"/>
    </group>
</menu>