<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">


    <ImageView
        android:id="@+id/userImage"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/profile_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <ImageView
        android:id="@+id/bookImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/book"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/username"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/userImage"
        android:layout_toEndOf="@+id/userImage"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/userImage"
        android:layout_toEndOf="@+id/userImage"
        android:layout_below="@+id/username"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"/>


    <TextView
        android:id="@+id/user_request_msg"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/bookTitle"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:clickable="true"
        android:textColor="@color/black"
        android:focusable="true" />

    <TextView
        android:id="@+id/request_date"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/userImage"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/accept_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bookImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/msg_box"
        android:layout_marginTop="10dp"
        android:text="@string/accept"
        android:gravity="center"/>

    <Button
        android:id="@+id/refuse_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bookImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/msg_box"
        android:layout_marginTop="10dp"
        android:text="@string/refuse"
        android:gravity="center"/>

    <Button
        android:id="@+id/open_chat"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bookImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/msg_box"
        android:layout_marginTop="10dp"
        android:text="@string/openChat"
        android:gravity="center"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bookImage"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/red_box"
        android:layout_marginTop="10dp"
        android:text="@string/delete_request"
        android:gravity="center"
        android:visibility="invisible"/>


</RelativeLayout>